@@ -1,6 +1,0 @@
-/** Dumb stdio.h
-    Z80 temp hack.
-*/
-
-void printf(const char *szFormat, ...);
-
